# Lab_6_Ordered_List_

./: CMakeLists.txt  Functions.cpp  Functions.h  Mode.cpp  Mode.h  Random.cpp  Random.h  main.cpp
Files/: Benchmark data.txt
Ord_list structures/: Ord_23.h  Ord_array.h  Ord_avl.h  Ord_bst.h  Ord_list.h  Point.cpp  Point.h
